Bug 498570 - Poor import from discover airlines tickets
Summary: Poor import from discover airlines tickets
Status: RESOLVED FIXED
Alias: None
Product: KDE Itinerary
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Volker Krause
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-12 19:05 UTC by Geert Janssens
Modified: 2025-01-13 16:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Geert Janssens 2025-01-12 19:05:32 UTC
SUMMARY
Due to a cancelled flight I ended up flying with Discover Airlines last week. I tried to import their ticket (in pdf format), but that didn't import anything. I could scan the bar code on the ticket, which gave me limited information.

I will send the pdf file in private, hopefully you can extract more data from it for a future release.

STEPS TO REPRODUCE
1. Import the pdf file
2. Scan the bar code instead

OBSERVED RESULT
1. Nothing was imported (message in Dutch: "Niets gevonden om te importeren")
2. Only limited data was imported:
    - Origin and destination airports (only abbreviated names and country)
    - Departure date (without times)
    - Flight number
    - Seat
   I imagine that is because no other information is available in the bar code

EXPECTED RESULT
1. More flight details being imported

SOFTWARE/OS VERSIONS
Tried with KDE Itinerary 24.12.1 on android (installed via f-droid)
Comment 1 Geert Janssens 2025-01-12 19:10:34 UTC
I forgot to mention the pdf file contains boarding passes for two connecting flights. The first flight is from Discover Airlines, the second is Brussels Airlines. I'm surprised that even the Brussels Airlines information didn't come through as the boarding passes from the original flight were also Brussels Airlines and did import mostly fine (except for the boarding time as reported in bug 498569)
Comment 2 Volker Krause 2025-01-13 16:23:28 UTC
Thanks! Turns out this is actually not specific to Discover Airlines but to the amount of pages in that PDF document (will be fixed shortly). The remaining issues are then the same as bug 498569.
Comment 3 Volker Krause 2025-01-13 16:24:56 UTC
Git commit b594808d332226ae28573ed56c804952d5f5c748 by Volker Krause.
Committed on 13/01/2025 at 16:24.
Pushed by vkrause into branch 'master'.

Increase upper PDF page limit for extraction

M  +1    -1    src/lib/processors/pdfdocumentprocessor.cpp

https://invent.kde.org/pim/kitinerary/-/commit/b594808d332226ae28573ed56c804952d5f5c748
Comment 4 Volker Krause 2025-01-13 16:27:05 UTC
Git commit bff15dc89a4e759fe47f49472e66258c1d4733c9 by Volker Krause.
Committed on 13/01/2025 at 16:26.
Pushed by vkrause into branch 'release/24.12'.

Increase upper PDF page limit for extraction
(cherry picked from commit b594808d332226ae28573ed56c804952d5f5c748)

M  +1    -1    src/lib/processors/pdfdocumentprocessor.cpp

https://invent.kde.org/pim/kitinerary/-/commit/bff15dc89a4e759fe47f49472e66258c1d4733c9