Increase upper PDF page limit for extraction

BUG: 498570
(cherry picked from commit b594808d332226ae28573ed56c804952d5f5c748)